gio/gio-tool-save.c
@@ -110,7 +110,7 @@ save (GFile *file)
 		{
 		  save_res = FALSE;
                   print_error ("%s", error->message);
-		  g_error_free (error);
+                  g_clear_error (error);
 		  goto out;
 		}
 	      res -= written;
